[tool.poetry]
name = "urn"
version = "0.1.0"
description = ""
authors = ["AxelWhite87 <alexandrecwhitehouse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.0"
docopt = "^0.6.2"
pony = "^0.7.16"
tinydb = "^4.7.1"
tabulate = "^0.9.0"
multipledispatch = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
